@@ -6,6 +6,12 @@ new bugs in the 2.x version.  And it still does not fix the bugs that I have
 noticed myself in indent.  Perhaps the next maintainer of indent will know
 something about regression testing -T.Dickey 2002/4/7
 
+2002-04-28
+	+ in file indent.c newline case, add check for writing a pending
+	  preprocessor statement.  In some cases, a "#if" immediately following
+	  an "#endif" would result in the text following the "#if" to be
+	  appended to that line (from 2.1.0).
+
 2002-04-26
 	+ refine check for inner_stmt, resetting p_l_follow only if the left
 	  curly-brace follows a left parenthesis or comma, as expected.
